code/dotnet/UniversalScreening/v1/README.md
<img alt="FactSet" src="https://www.factset.com/hubfs/Assets/images/factset-logo.svg" height="56" width="290">

# Universal Screening client library for .NET

[![Nuget](https://img.shields.io/nuget/v/FactSet.SDK.UniversalScreening)](https://www.nuget.org/packages/FactSet.SDK.UniversalScreening)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Through the Universal Screening API, you can access the power of FactSet's Universal Screening Application.
Calculate and return the results of your saved Universal Screens.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 0.0.1
- Package version: 0.20.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.UniversalScreening
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.UniversalScreening
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.UniversalScreening.Api;
using FactSet.SDK.UniversalScreening.Client;
using FactSet.SDK.UniversalScreening.Model;

namespace Example
{ 
    public static class DeleteActiveJobExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.UniversalScreening.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new DefaultApi(config);
            var id = "id_example";  // string | Unique identifier for a screen calculation job

            try
            {
                apiInstance.DeleteActiveJob(id);
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling DefaultApi.DeleteActiveJob: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }

        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *http://localhost*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*DefaultApi* | [**DeleteActiveJob**](docs/DefaultApi.md#deleteactivejob) | **DELETE** /v1/calculations/{id} | 
*DefaultApi* | [**DeleteAllActiveJobs**](docs/DefaultApi.md#deleteallactivejobs) | **DELETE** /v1/calculations | 
*DefaultApi* | [**GetAllActiveJobs**](docs/DefaultApi.md#getallactivejobs) | **GET** /v1/calculations | 
*DefaultApi* | [**GetCalculateResults**](docs/DefaultApi.md#getcalculateresults) | **GET** /v1/calculations/{id} | 
*DefaultApi* | [**PollArchiveOFDB**](docs/DefaultApi.md#pollarchiveofdb) | **GET** /v1/archive/{id}/status | 
*DefaultApi* | [**PollCalculate**](docs/DefaultApi.md#pollcalculate) | **GET** /v1/calculations/{id}/status | 
*DefaultApi* | [**SubmitArchiveOFDB**](docs/DefaultApi.md#submitarchiveofdb) | **POST** /v1/archive | 
*DefaultApi* | [**SubmitCalculate**](docs/DefaultApi.md#submitcalculate) | **POST** /v1/calculations | 


## Documentation for Models

 - [Model.ErrorArray](docs/ErrorArray.md)
 - [Model.ErrorCode](docs/ErrorCode.md)
 - [Model.ErrorObject](docs/ErrorObject.md)
 - [Model.ForErrorsAndWarningsFoundInScreensContainsTheParamIDTheErrorWarningBelongsTo](docs/ForErrorsAndWarningsFoundInScreensContainsTheParamIDTheErrorWarningBelongsTo.md)
 - [Model.InlineResponse200](docs/InlineResponse200.md)
 - [Model.InlineResponse200Data](docs/InlineResponse200Data.md)
 - [Model.PaginationResponse](docs/PaginationResponse.md)
 - [Model.ResourceStatusResponse](docs/ResourceStatusResponse.md)
 - [Model.ResourceStatusResponseData](docs/ResourceStatusResponseData.md)
 - [Model.ResultsMetadata](docs/ResultsMetadata.md)
 - [Model.ScreenArchiveOFDBParameters](docs/ScreenArchiveOFDBParameters.md)
 - [Model.ScreenArchiveOFDBParametersData](docs/ScreenArchiveOFDBParametersData.md)
 - [Model.ScreenArchiveOFDBParametersDataArchiveOptions](docs/ScreenArchiveOFDBParametersDataArchiveOptions.md)
 - [Model.ScreenCalcParameters](docs/ScreenCalcParameters.md)
 - [Model.ScreenCalcParametersData](docs/ScreenCalcParametersData.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2022 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
