code/dotnet/UniversalScreening/v2/README.md
[![FactSet](https://raw.githubusercontent.com/factset/enterprise-sdk/main/docs/images/factset-logo.svg)](https://www.factset.com)

# Universal Screening client library for .NET

[![API Version](https://img.shields.io/badge/api-v2.0.2-blue)](https://developer.factset.com/api-catalog/universal-screening-api)
[![Nuget](https://img.shields.io/badge/nuget-v1.3.0-orange)](https://www.nuget.org/packages/FactSet.SDK.UniversalScreening/1.3.0)
[![Apache-2 license](https://img.shields.io/badge/license-Apache2-brightgreen.svg)](https://www.apache.org/licenses/LICENSE-2.0)

Through the Universal Screening API, you can access the power of FactSet's Universal Screening Application.
Calculate and return the results of your saved Universal Screens.

This .NET package is automatically generated by the [OpenAPI Generator](https://openapi-generator.tech) project:

- API version: 2.0.2
- SDK version: 1.3.0
- Build package: com.factset.sdk.codegen.FactSetCSharpNetCoreClientCodegen

For more information, please visit [https://developer.factset.com/contact](https://developer.factset.com/contact)

## Requirements

* .NET Standard >= 2.0

## Installation

### .NET CLI

```bash
dotnet add package FactSet.SDK.Utils
dotnet add package FactSet.SDK.UniversalScreening -v 1.3.0
```

### NuGet

```bash
nuget install FactSet.SDK.Utils
nuget install FactSet.SDK.UniversalScreening -Version 1.3.0
```

## Usage

1. [Generate authentication credentials](../../../../README.md#authentication).
2. Setup [.NET Standard 2.0](https://docs.microsoft.com/en-us/dotnet/standard/net-standard?tabs=net-standard-2-0) compatible environment.
3. [Install dependencies](#installation).
4. Run the following:

> [!IMPORTANT]
> The parameter variables defined below are just examples and may potentially contain non valid values. Please replace them with valid values.

### Example Code

```csharp
using System;
using System.Threading.Tasks;
using FactSet.SDK.Utils.Authentication;
using FactSet.SDK.UniversalScreening.Api;
using FactSet.SDK.UniversalScreening.Client;
using FactSet.SDK.UniversalScreening.Model;

namespace Example
{
    public static class DeleteActiveJobExample
    {
        public static async Task Main()
        {
            var config = new FactSet.SDK.UniversalScreening.Client.Configuration();

            // Examples for each supported authentication method are below,
            // choose one that satisfies your use case.

            /* (Preferred) OAuth 2.0: FactSetOAuth2 */
            // See https://github.com/FactSet/enterprise-sdk#oauth-20
            // for information on how to create the app-config.json file
            //
            // The confidential client instance should be reused in production environments.
            // See https://github.com/FactSet/enterprise-sdk-utils-dotnet#authentication
            // for more information on using the ConfidentialClient class
            ConfidentialClient confidentialClient = await ConfidentialClient.CreateAsync("/path/to/app-config.json");
            config.OAuth2Client = confidentialClient;

            /* Basic authentication: FactSetApiKey */
            // See https://github.com/FactSet/enterprise-sdk#api-key
            // for information how to create an API key
            // config.Username = "USERNAME-SERIAL";
            // config.Password = "API-KEY";

            var apiInstance = new JobManagementApi(config);
            var id = "123e4567-e89b-12d3-a456-426655440000";  // Guid | Unique identifier for a job. \"Job\" refers to a screen calculation or archival.

            try
            {
                apiInstance.DeleteActiveJob(id);
            }
            catch (ApiException e)
            {
                Console.WriteLine("Exception when calling JobManagementApi.DeleteActiveJob: " + e.Message );
                Console.WriteLine("Status Code: "+ e.ErrorCode);
                Console.WriteLine(e.StackTrace);
            }
        }
    }
}
```

### Using a Proxy

To use the API client with a HTTP proxy, setup a `System.Net.WebProxy`

```csharp
Configuration c = new Configuration();
System.Net.WebProxy webProxy = new System.Net.WebProxy("http://myProxyUrl:80/");
webProxy.Credentials = System.Net.CredentialCache.DefaultCredentials;
c.Proxy = webProxy;
```

## Documentation for API Endpoints

All URIs are relative to *https://api.factset.com/universal-screening/v2*

Class | Method | HTTP request | Description
------------ | ------------- | ------------- | -------------
*JobManagementApi* | [**DeleteActiveJob**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/JobManagementApi.md#deleteactivejob) | **DELETE** /job/{id} | 
*JobManagementApi* | [**DeleteAllActiveJobs**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/JobManagementApi.md#deleteallactivejobs) | **DELETE** /jobs | 
*JobManagementApi* | [**GetAllActiveJobs**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/JobManagementApi.md#getallactivejobs) | **GET** /jobs | 
*ScreeningOperationsApi* | [**GetCalculateResults**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreeningOperationsApi.md#getcalculateresults) | **GET** /job/{id} | 
*ScreeningOperationsApi* | [**GetExportResults**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreeningOperationsApi.md#getexportresults) | **GET** /job/{id}/export | 
*ScreeningOperationsApi* | [**PollCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreeningOperationsApi.md#pollcalculate) | **GET** /job/{id}/status | 
*ScreeningOperationsApi* | [**SubmitArchiveOFDB**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreeningOperationsApi.md#submitarchiveofdb) | **POST** /job/archive | 
*ScreeningOperationsApi* | [**SubmitCalculate**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreeningOperationsApi.md#submitcalculate) | **POST** /job/calculate | 
*ScreeningOperationsApi* | [**SubmitExport**](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreeningOperationsApi.md#submitexport) | **POST** /job/export | 


## Documentation for Models

 - [Model.ActiveJobIDs](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ActiveJobIDs.md)
 - [Model.ActiveJobsData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ActiveJobsData.md)
 - [Model.CalculateMetadata](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/CalculateMetadata.md)
 - [Model.DelimitedOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/DelimitedOptions.md)
 - [Model.ErrorArray](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ErrorArray.md)
 - [Model.ErrorCode](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ErrorCode.md)
 - [Model.ErrorObject](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ErrorObject.md)
 - [Model.ErrorObjectSource](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ErrorObjectSource.md)
 - [Model.ExcelOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ExcelOptions.md)
 - [Model.GroupingInfo](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/GroupingInfo.md)
 - [Model.PaginatedCalculationResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/PaginatedCalculationResponse.md)
 - [Model.PaginationResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/PaginationResponse.md)
 - [Model.PdfOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/PdfOptions.md)
 - [Model.ResourceStatusResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ResourceStatusResponse.md)
 - [Model.ResourceStatusResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ResourceStatusResponseData.md)
 - [Model.ResultsMetadata](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ResultsMetadata.md)
 - [Model.ScreenArchiveOFDBParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreenArchiveOFDBParameters.md)
 - [Model.ScreenArchiveOFDBParametersData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreenArchiveOFDBParametersData.md)
 - [Model.ScreenArchiveOFDBParametersDataArchiveOptions](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreenArchiveOFDBParametersDataArchiveOptions.md)
 - [Model.ScreenCalcParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreenCalcParameters.md)
 - [Model.ScreenCalcParametersData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreenCalcParametersData.md)
 - [Model.ScreenExportParameters](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreenExportParameters.md)
 - [Model.ScreenExportParametersData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/ScreenExportParametersData.md)
 - [Model.SubmitExportResponse](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/SubmitExportResponse.md)
 - [Model.SubmitExportResponseData](https://github.com/FactSet/enterprise-sdk/tree/main/code/dotnet/UniversalScreening/v2/docs/SubmitExportResponseData.md)


## Documentation for Authorization


### FactSetApiKey

- **Type**: HTTP basic authentication


### FactSetOAuth2

- **Type**: OAuth
- **Flow**: application
- **Authorization URL**: 
- **Scopes**: N/A


## Contributing

Please refer to the [contributing guide](../../../../CONTRIBUTING.md).

## Copyright

Copyright 2026 FactSet Research Systems Inc

Licensed under the Apache License, Version 2.0 (the "License");
you may not use this file except in compliance with the License.
You may obtain a copy of the License at

    http://www.apache.org/licenses/LICENSE-2.0

Unless required by applicable law or agreed to in writing, software
distributed under the License is distributed on an "AS IS" BASIS,
WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
See the License for the specific language governing permissions and
limitations under the License.
